# onderwijs-analist-bot

./: .gitignore  Dockerfile  README.rst  docker-compose.yml  pyproject.toml
data/: Dockerfile.elasticsearch  build.sh  upload_docs_es.sh
data/dataset/: 0_Schoolgids_De_Vlinder.txt  0_Schoolgids_De_Vlinder_p2.txt
onderwijs_analist_bot/: webapp.py
tests/: test_onderwijs_analist_bot.py
