[tool.poetry]
name = "onderwijs-analist-bot"
version = "0.1.0"
description = ""
authors = ["Job Visser <job.visser@leaseplan.com>"]

[tool.poetry.dependencies]
python = "~3.10"
"streamlit" =  ">= 1.9.0, < 2"
"st-annotated-text" =  ">= 2.0.0, < 3"
"markdown" = ">= 3.3.4, < 4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
