[tool.poetry]
name = "onderwijs-analist-bot"
version = "0.1.0"
description = ""
authors = ["Job Visser <job.visser@leaseplan.com>"]

[tool.poetry.dependencies]
python = "~3.10"
farm-haystack = "~1.15"
ipykernel = "^6.22.0"
streamlit = "^1.21.0"
st-annotated-text = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
